--- a/src/App.css
+++ b/src/App.css
@@ -9,4 +9,5 @@
 body {
   font-family: sans-serif, Helvetica !important;
   background: var(--mainWhite) !important;
+  color: var(--mainDark) !important;
 }
