changes cart button hover color to pink

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 :root{
   --mainRed:#95072b;
-  --lightRed:#f58ca6;
+  --lightRed:#f6adbf;
   --mainWhite:#f3f3f3;
   --mainDark:#250f0f;
-  --mainYellow: #dcfa59;
+  --mainYellow: #cbf709;
   --mainBlue: #2806c0;
 }
 
